--- a/installer/packages/com.openstream.openstreamapp/meta/package.xml
+++ b/installer/packages/com.openstream.openstreamapp/meta/package.xml
@@ -5,4 +5,7 @@
     <Version>1.0.0-1</Version>
     <ReleaseDate>2020-09-19</ReleaseDate>
     <Default>true</Default>
+    <Licenses>
+            <License file="gpl3.txt" name="GNU General Public License v3.0"/>
+    </Licenses>
 </Package>
