Add conf initial check for files. Automatic set

--- a/assets/sunshine.conf
+++ b/assets/sunshine.conf
@@ -33,8 +33,7 @@ min_threads = 1
 
 # Force a specific encoder, otherwise Sunshine will use the first encoder that is available
 # supported encoders:
-#   nvenc
-#   software
+#   software by default
 #
 encoder = software
 
