Add encoder speed option: Fast, Faster, Ultrafast

--- a/assets/sunshine.conf
+++ b/assets/sunshine.conf
@@ -37,3 +37,6 @@ min_threads = 1
 #
 encoder = software
 
+##################################### Software Encoding Speed #####################################
+# See x264 --fullhelp for the different presets
+sw_preset = ultrafast
