--- a/assets/sunshine.conf
+++ b/assets/sunshine.conf
@@ -40,3 +40,12 @@ encoder = software
 ##################################### Software Encoding Speed #####################################
 # See x264 --fullhelp for the different presets
 sw_preset = ultrafast
+
+##################################### video codec ################################################
+# Allows the client to request HEVC Main or HEVC Main10 video streams.
+# HEVC is more CPU-intensive to encode, so enabling this may reduce performance when using software encoding.
+# If set to 0 (default), Sunshine will specify support for HEVC based on encoder
+# If set to 1, Sunshine will not advertise support for HEVC
+# If set to 2, Sunshine will advertise support for HEVC Main profile
+# If set to 3, Sunshine will advertise support for HEVC Main and Main10 (HDR) profiles
+hevc_mode = 2
