Add some defaults values requested

--- a/assets/sunshine.conf
+++ b/assets/sunshine.conf
@@ -39,7 +39,7 @@ encoder = software
 
 ##################################### Software Encoding Speed #####################################
 # See x264 --fullhelp for the different presets
-sw_preset = ultrafast
+sw_preset = superfast
 
 ##################################### video codec ################################################
 # Allows the client to request HEVC Main or HEVC Main10 video streams.
@@ -49,3 +49,18 @@ sw_preset = ultrafast
 # If set to 2, Sunshine will advertise support for HEVC Main profile
 # If set to 3, Sunshine will advertise support for HEVC Main and Main10 (HDR) profiles
 hevc_mode = 2
+
+#################################### System priority ###########################################
+system_priority = 1
+
+##################################### Default settings by the guys ##############################
+# Error correcting packets:
+fec_percentage = 30
+
+# Software Encoding:
+qp = 15
+sw_tune = zerolatency
+
+# Nvidia encoding
+nv_preset = llhq
+nv_rc = cbr_hq
