Add feats to installer: default location and desktop shortcut

--- a/installer/packages/com.openstream.openstreamapp/meta/package.xml
+++ b/installer/packages/com.openstream.openstreamapp/meta/package.xml
@@ -8,4 +8,5 @@
     <Licenses>
             <License file="gpl3.txt" name="GNU General Public License v3.0"/>
     </Licenses>
+    <Script>installscript.qs</Script>
 </Package>
