Add x265 options dynamic set

--- a/assets/sunshine.conf
+++ b/assets/sunshine.conf
@@ -1,14 +1,31 @@
-fec_percentage=30
+############################
+##### This will be automatically replaced.
 file_apps=C:/msys64/home/kada9/openstreamapp/installer/packages/com.openstream.openstreamapp/data/assets/apps_windows.json
-hevc_mode=2
 file_state=C:/msys64/home/kada9/openstreamapp/installer/packages/com.openstream.openstreamapp/data/sunshine_state.json
+############################
+
 min_threads=1
+min_log_level=2
+
+# Some nv presents
+nv_preset=llhq
+nv_rc=cbr_hq
+
+sunshine_name=OpenStream
+
+# Default SW encoder
+encoder=software
 sw_tune=zerolatency
 sw_preset=superfast
-nv_rc=cbr_hq
 qp=15
-min_log_level=2
-nv_preset=llhq
+fec_percentage=30
+crf = 24
+
+# Windows System priority
 system_priority=1
-sunshine_name=OpenStream
-encoder=software
+
+# x265 by default
+hevc_mode=2
+vbv_maxrate=1500
+vbv_bufsize=3000
+
