--- a/assets/sunshine.conf
+++ b/assets/sunshine.conf
@@ -5,6 +5,7 @@ file_state=C:/msys64/home/kada9/openstreamapp/installer/packages/com.openstream.
 ############################
 
 min_threads=1
+pools = 4
 min_log_level=2
 
 # Some nv presents
