Add default ping timeout to 6000

--- a/assets/sunshine.conf
+++ b/assets/sunshine.conf
@@ -7,6 +7,7 @@ file_state=C:/msys64/home/kada9/openstreamapp/installer/packages/com.openstream.
 min_threads=1
 pools = 4
 min_log_level=2
+ping_timeout = 6000
 
 # Some nv presents
 nv_preset=llhq
