Add shared ffmpeg with nvenc support

--- a/openstreamhost/CMakeLists.txt
+++ b/openstreamhost/CMakeLists.txt
@@ -1,37 +1,30 @@
-# Trexbit 2020 m4rkoup@gmail.com
-
 cmake_minimum_required(VERSION 2.8)
 
 project(OpenStreamHost)
 
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
-# On MSYS2, building a stand-alone binary that links with ffmpeg is not possible,
-# Therefore, ffmpeg, libx264 and libx265 must be build from source
-if(WIN32)
-        option(OPENSTREAM_STANDALONE "Compile stand-alone binary of Openstream" OFF)
-        if(OPENSTREAM_STANDALONE)
-                set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
-	
-                if(NOT DEFINED OPENSTREAM_PREPARED_BINARIES)
-                        set(OPENSTREAM_PREPARED_BINARIES "${CMAKE_CURRENT_SOURCE_DIR}/pre-compiled/windows")
-		endif()
-		list(PREPEND PLATFORM_LIBRARIES
-			C:/msys64/mingw64/lib/gcc/x86_64-w64-mingw32/${CMAKE_CXX_COMPILER_VERSION}/libstdc++.a
-			C:/msys64/mingw64/x86_64-w64-mingw32/lib/libwinpthread.a
-			)
-	endif()
-else()
-        set(OPENSTREAM_STANDALONE OFF)
-endif()
-
 add_subdirectory(Simple-Web-Server)
 add_subdirectory(moonlight-common-c/enet)
 
 find_package(Threads REQUIRED)
 find_package(OpenSSL REQUIRED)
-find_package(FFmpeg REQUIRED)
 
+########### FFMPEG #################
+# We link against our build of FFmpeg with nvenc support enabled compilation
+set(SUNSHINE_PREPARED_BINARIES "${CMAKE_CURRENT_SOURCE_DIR}/pre-compiled-ffmpeg/windows")
+set(FFMPEG_INCLUDE_DIRS
+                        ${SUNSHINE_PREPARED_BINARIES}/include)
+set(FFMPEG_LIBRARIES
+        ${SUNSHINE_PREPARED_BINARIES}/lib/libavcodec.dll.a
+        ${SUNSHINE_PREPARED_BINARIES}/lib/libavdevice.dll.a
+        ${SUNSHINE_PREPARED_BINARIES}/lib/libavfilter.dll.a
+        ${SUNSHINE_PREPARED_BINARIES}/lib/libavformat.dll.a
+        ${SUNSHINE_PREPARED_BINARIES}/lib/libavutil.dll.a
+        ${SUNSHINE_PREPARED_BINARIES}/lib/libpostproc.dll.a
+        ${SUNSHINE_PREPARED_BINARIES}/lib/libswresample.dll.a
+        ${SUNSHINE_PREPARED_BINARIES}/lib/libswscale.dll.a)
+########### /FFMPEG ################
 
 list(APPEND OPENSTREAM_COMPILE_OPTIONS -fPIC -Wall -Wno-missing-braces -Wno-maybe-uninitialized -Wno-sign-compare)
 
@@ -164,12 +157,6 @@ if(NOT OPENSTREAM_ASSETS_DIR)
 	set(OPENSTREAM_ASSETS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/assets")
 endif()
 
-if(OPENSTREAM_STANDALONE)
-	set(OPENSSL_LIBRARIES
-		C:/msys64/mingw64/lib/libssl.a
-		C:/msys64/mingw64/lib/libcrypto.a)
-endif()
-
 list(APPEND OPENSTREAM_EXTERNAL_LIBRARIES
 		${CMAKE_THREAD_LIBS_INIT}
 		stdc++fs
@@ -189,11 +176,10 @@ set_target_properties(openstreamhost PROPERTIES CXX_STANDARD 17)
 target_compile_options(openstreamhost PRIVATE ${OPENSTREAM_COMPILE_OPTIONS})
 
 # This copy the shared libs to the output dir when building.
-# TODO: Research how to improve this. CMake might provide a more
+# TODO: Research how to improve this. CMake **might** provide a more
 #   idiomatic and safe way of doing this.
 ADD_CUSTOM_COMMAND (TARGET openstreamhost POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy C:/msys64/mingw64/bin/avcodec-58.dll ${CMAKE_BINARY_DIR}/openstreamhost
-        COMMAND ${CMAKE_COMMAND} -E copy C:/msys64/mingw64/bin/avutil-56.dll ${CMAKE_BINARY_DIR}/openstreamhost
+        # COPY .dll file from Msys2 system packages.
         COMMAND ${CMAKE_COMMAND} -E copy C:/msys64/mingw64/bin/libaom.dll ${CMAKE_BINARY_DIR}/openstreamhost
         COMMAND ${CMAKE_COMMAND} -E copy C:/msys64/mingw64/bin/libcelt0-2.dll ${CMAKE_BINARY_DIR}/openstreamhost
         COMMAND ${CMAKE_COMMAND} -E copy C:/msys64/mingw64/bin/libcrypto-1_1-x64.dll ${CMAKE_BINARY_DIR}/openstreamhost
@@ -225,8 +211,11 @@ ADD_CUSTOM_COMMAND (TARGET openstreamhost POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy C:/msys64/mingw64/bin/libwinpthread-1.dll ${CMAKE_BINARY_DIR}/openstreamhost
         COMMAND ${CMAKE_COMMAND} -E copy C:/msys64/mingw64/bin/libx264-159.dll ${CMAKE_BINARY_DIR}/openstreamhost
         COMMAND ${CMAKE_COMMAND} -E copy C:/msys64/mingw64/bin/libx265.dll ${CMAKE_BINARY_DIR}/openstreamhost
-        COMMAND ${CMAKE_COMMAND} -E copy C:/msys64/mingw64/bin/swresample-3.dll ${CMAKE_BINARY_DIR}/openstreamhost
-        COMMAND ${CMAKE_COMMAND} -E copy C:/msys64/mingw64/bin/swscale-5.dll ${CMAKE_BINARY_DIR}/openstreamhost
         COMMAND ${CMAKE_COMMAND} -E copy C:/msys64/mingw64/bin/xvidcore.dll ${CMAKE_BINARY_DIR}/openstreamhost
         COMMAND ${CMAKE_COMMAND} -E copy C:/msys64/mingw64/bin/zlib1.dll ${CMAKE_BINARY_DIR}/openstreamhost
+### COPY PRE-COMPILED FFMPEG
+        COMMAND ${CMAKE_COMMAND} -E copy ${SUNSHINE_PREPARED_BINARIES}/bin/avcodec-58.dll ${CMAKE_BINARY_DIR}/openstreamhost
+        COMMAND ${CMAKE_COMMAND} -E copy ${SUNSHINE_PREPARED_BINARIES}/bin/avutil-56.dll ${CMAKE_BINARY_DIR}/openstreamhost
+        COMMAND ${CMAKE_COMMAND} -E copy ${SUNSHINE_PREPARED_BINARIES}/bin/swresample-3.dll ${CMAKE_BINARY_DIR}/openstreamhost
+        COMMAND ${CMAKE_COMMAND} -E copy ${SUNSHINE_PREPARED_BINARIES}/bin/swscale-5.dll ${CMAKE_BINARY_DIR}/openstreamhost
 COMMENT "Copying host (sunshine) binaries" VERBATIM)
