Fix to config files

--- a/assets/h265AMDAMF.conf
+++ b/assets/h265AMDAMF.conf
@@ -4,10 +4,9 @@ min_log_level=2
 ping_timeout = 6000
 
 sunshine_name=OpenStream
-
-# Default SW encoder
+# AMD encoder with x265 enabled
 encoder=amf
-hevc_mode=1
+hevc_mode=2
 
 # Windows System priority
 system_priority=2
