AMF AMF dialogs first version. Not final.

--- a/assets/h264AMDAMF.conf
+++ b/assets/h264AMDAMF.conf
@@ -7,6 +7,9 @@ sunshine_name=OpenStream
 
 encoder=amf
 hevc_mode=0
+amf_quality=speed
+amf_rc=vbr_peak
+amf_maxrate=20000000
 
 # Windows System priority
 system_priority=2
