--- a/assets/h265AMDAMF.conf
+++ b/assets/h265AMDAMF.conf
@@ -7,6 +7,9 @@ sunshine_name=OpenStream
 # AMD encoder with x265 enabled
 encoder=amf
 hevc_mode=2
+amf_quality=speed
+amf_rc=vbr_peak
+amf_maxrate=20000
 
 # Windows System priority
 system_priority=2
